--- a/Praktikum 3/Praktikum_3_Pola.ipynb
+++ b/Praktikum 3/Praktikum_3_Pola.ipynb
@@ -207,7 +207,7 @@
      "text": [
       "   Nama Pasien  umur gender diagnosa sakit\n",
       "0         anna    23      P          tidak\n",
-      "1         aldo    23      L             ya\n",
+      "1         maudy    23      L             ya\n",
       "2         anto    24      L             ya\n",
       "3         budi    35      L             ya\n",
       "4          adi    35      L          tidak\n",
@@ -242,7 +242,7 @@
       "\n",
       "Nama Pasien\tumur\tgender\tdiagnosa sakit\n",
       "anna\t23\tP\ttidak\n",
-      "aldo\t23\tL\tya\n",
+      "maudy\t23\tL\tya\n",
       "anto\t24\tL\tya\n",
       "budi\t35\tL\tya\n",
       "adi\t35\tL\ttidak\n",
